MAPRHADOOP-328: Fixed JDK 17 support for container localizer